@@ -49,84 +49,84 @@ class Felt_Array2; // forward decl.
 class Felt_File2
 {
 public:
-	/// constructor
-	/**
-	 * open an empty felt file, just a default constructor, no useful information
-	 */
-	Felt_File2() {}
-	/**
-	 * open and read toc of a felt file
-	 * \param filename name of felt file
-	 */
-	explicit Felt_File2(const std::string& filename);
-	/**
-	 * open and read toc of a felt file
-	 * \param paramList a list of known parameters (in diana format, e.g. 17,2,1000:prod=74), only the known parameters will be read
-	 * \warning The diana format is extended by dataType=short|float|double and fillValue=(number in short|float|double) to add the return type of the data.
-	 * Autoscaling will be turned on for 'getDataSlice'. default is dataType=short:fillValue=-32767
-	 */
-	explicit Felt_File2(const std::string& filename, const std::vector<std::string>& dianaParamList, const std::map<std::string, std::string>& options);
-	virtual ~Felt_File2();
-	//float* getData(const string& compName);
+    /// constructor
+    /**
+     * open an empty felt file, just a default constructor, no useful information
+     */
+    Felt_File2() {}
+    /**
+     * open and read toc of a felt file
+     * \param filename name of felt file
+     */
+    explicit Felt_File2(const std::string& filename);
+    /**
+     * open and read toc of a felt file
+     * \param paramList a list of known parameters (in diana format, e.g. 17,2,1000:prod=74), only the known parameters will be read
+     * \warning The diana format is extended by dataType=short|float|double and fillValue=(number in short|float|double) to add the return type of the data.
+     * Autoscaling will be turned on for 'getDataSlice'. default is dataType=short:fillValue=-32767
+     */
+    explicit Felt_File2(const std::string& filename, const std::vector<std::string>& dianaParamList, const std::map<std::string, std::string>& options);
+    virtual ~Felt_File2();
+    //float* getData(const string& compName);
 
-	/// retrieve a Felt_Array2
-	/**
-	 * \param compName parameter name of felt file as named in diana setup
-	 */
-	const boost::shared_ptr<Felt_Array2> getFeltArray(const std::string& compName) const;
-	/// retrieve a data slice
-	/**
-	 * retrieve the data prescaled (if float or double) and replaced with the new fill value
-	 *
-	 * @param compName parameter name of felt file
-	 * @param time time of slice
-	 * @param level level of slice
-	 */
-	boost::shared_ptr<MetNoFimex::Data> getScaledDataSlice(boost::shared_ptr<Felt_Array2> feltArray, const boost::posix_time::ptime time, const LevelPair level);
+    /// retrieve a Felt_Array2
+    /**
+     * \param compName parameter name of felt file as named in diana setup
+     */
+    const boost::shared_ptr<Felt_Array2> getFeltArray(const std::string& compName) const;
+    /// retrieve a data slice
+    /**
+     * retrieve the data prescaled (if float or double) and replaced with the new fill value
+     *
+     * @param compName parameter name of felt file
+     * @param time time of slice
+     * @param level level of slice
+     */
+    boost::shared_ptr<MetNoFimex::Data> getScaledDataSlice(boost::shared_ptr<Felt_Array2> feltArray, const boost::posix_time::ptime time, const LevelPair level);
 
-	/**
-	 *  retrieve all felt arrays
-	 */
-	std::vector<boost::shared_ptr<Felt_Array2> > listFeltArrays() const;
+    /**
+     *  retrieve all felt arrays
+     */
+    std::vector<boost::shared_ptr<Felt_Array2> > listFeltArrays() const;
 
-	/**
-	 *  Z-axis types and values
-	 * @return map consisting of felt level-ids and a sorted vector of level values
-	 */
-	//std::map<short, std::vector<short> > getFeltLevels() const;
-	/**
-	 *  Z-axis types and values
-	 * @return map consisting of felt level-ids and a sorted vector of level-pairs of values
-	 */
-	std::map<short, std::vector<LevelPair> > getFeltLevelPairs() const;
-	/**
-	 * get all members of ensembles
-	 */
-	std::vector<short> getEnsembleMembers() const;
-	const std::map<LevelPair, int>& getHybridLevels() const {return hybridLevels_;}
-	/// all time values, sorted
-	std::vector<boost::posix_time::ptime> getFeltTimes() const;
-	/**
-	 * get the unique reference time of the felt file
-	 * @return a unique reference time
-	 * @throw exception if no unique reference time exists
-	 */
-	boost::shared_ptr<boost::posix_time::ptime> getUniqueReferenceTime() const;
-	/// get size in x direction
-	int getNX() const;
-	/// get size in y direction
-	int getNY() const;
-	/// get the values of the x axis
-	boost::shared_ptr<MetNoFimex::Data> getXData() const;
-	/// get the values of the y axis
-	boost::shared_ptr<MetNoFimex::Data> getYData() const;
+    /**
+     *  Z-axis types and values
+     * @return map consisting of felt level-ids and a sorted vector of level values
+     */
+    //std::map<short, std::vector<short> > getFeltLevels() const;
+    /**
+     *  Z-axis types and values
+     * @return map consisting of felt level-ids and a sorted vector of level-pairs of values
+     */
+    std::map<short, std::vector<LevelPair> > getFeltLevelPairs() const;
+    /**
+     * get all members of ensembles
+     */
+    std::vector<short> getEnsembleMembers() const;
+    const std::map<LevelPair, int>& getHybridLevels() const {return hybridLevels_;}
+    /// all time values, sorted
+    std::vector<boost::posix_time::ptime> getFeltTimes() const;
+    /**
+     * get the unique reference time of the felt file
+     * @return a unique reference time
+     * @throw exception if no unique reference time exists
+     */
+    boost::shared_ptr<boost::posix_time::ptime> getUniqueReferenceTime() const;
+    /// get size in x direction
+    int getNX() const;
+    /// get size in y direction
+    int getNY() const;
+    /// get the values of the x axis
+    boost::shared_ptr<MetNoFimex::Data> getXData() const;
+    /// get the values of the y axis
+    boost::shared_ptr<MetNoFimex::Data> getYData() const;
 
     /**
      *  assumes one set of grid-parameters for the whole file, returns parameter between 1 and 6, without extra definition
      */
     int getGridType() const;
-	/// assumes one set of grid-parameters for the whole file
-	boost::shared_ptr<felt::FeltGridDefinition> getGridDefinition() const;
+    /// assumes one set of grid-parameters for the whole file
+    boost::shared_ptr<felt::FeltGridDefinition> getGridDefinition() const;
 
 private:
     std::string filename_;
